# 150kW_EVCharger

./: charger.tar  init  run-commands.desktop  startup-script.sh
charger/: base.js  can.js  init.sh  readme  setup.sh
charger/can/Protocol/: msggen  msggenerator.c
charger/code/: base.js  base2.js  can.js  canlist.json  config.json  emulator.js  nodecan.json  package-lock.json  package.json  test.js  test_base.js  test_cases  test_cases.json
charger/code/lib/: can-test.js  can-test2.js  can.js  log.js  readme
charger/code/lib/log/: .c4e54cdf31488fad195f77d7787c1c53fc2a0605-audit.json
charger/code2/: CMakeLists.txt  bknodecan.cpp  bknodecan.hpp  can.cpp  main  main.cpp  nodecan.cpp  nodecan.hpp  nodecan_test  readme
charger/code2/test/: poly  polymoprism.cpp  ring  ring.cpp  socketcan  socketcan.cpp  split  split.cpp  threads  threads.cpp  union  union.cpp
charger/code2/test/node_api/my-addon/: addonx.cpp  app.js  binding.gyp  package-lock.json
charger/logs/: .0e84f60c125fd95be87388cb8a7c38875556e713-audit.json
charger/network/: .setupFacereg.sh.swp  .wifisetup.sh.swp  setup-net.sh  wificheck.sh
charger/network-imesh/: check_internet.service  setupFacereg.sh  wifiStart.sh  wifisetup.sh  wifiup.service  wpa_supplicant.conf
charger/setup/: check_internet.service  interfaces  setup.sh  wifiup.service  wifiup.sh
server/: index.html  server.js
